--- a/GouGou-Live/Classes/Login/Controllers/SurePsd/SurePsdSuccessViewController.xib
+++ b/GouGou-Live/Classes/Login/Controllers/SurePsd/SurePsdSuccessViewController.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1912" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SurePsdSuccessViewController">
@@ -16,25 +16,18 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="icon开心狗" translatesAutoresizingMaskIntoConstraints="NO" id="WyG-Yc-nrs">
-                    <rect key="frame" x="105" y="114" width="166" height="84"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon开心狗" translatesAutoresizingMaskIntoConstraints="NO" id="WyG-Yc-nrs">
+                    <rect key="frame" x="105" y="70" width="166" height="84"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="请使用新密码重新登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uO-Wo-37j">
-                    <rect key="frame" x="103" y="218" width="170" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请使用新密码重新登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uO-Wo-37j">
+                    <rect key="frame" x="103" y="174" width="170" height="20.5"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.44705882352941173" green="0.44705882352941173" blue="0.44705882352941173" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAE-30-C8S">
-                    <rect key="frame" x="325" y="80" width="30" height="33"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <state key="normal" title="3S">
-                        <color key="titleColor" red="0.69803921568627447" green="0.69803921568627447" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ala-17-foh">
-                    <rect key="frame" x="33" y="259" width="310" height="44"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ala-17-foh">
+                    <rect key="frame" x="40" y="214.5" width="296" height="44"/>
                     <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="OuX-cj-Me3"/>
@@ -43,21 +36,34 @@
                     <state key="normal" title="确认">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="xvy-DL-pjM"/>
+                        </mask>
+                    </variation>
                     <connections>
                         <action selector="clickSureBtnAction:" destination="-1" eventType="touchUpInside" id="erm-Zv-RRn"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAE-30-C8S">
+                    <rect key="frame" x="325" y="30" width="30" height="33"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <state key="normal" title="3S">
+                        <color key="titleColor" red="0.69803921568627447" green="0.69803921568627447" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="mAE-30-C8S" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="72D-R6-1M3"/>
+                <constraint firstItem="mAE-30-C8S" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="30" id="72D-R6-1M3"/>
                 <constraint firstAttribute="trailing" secondItem="mAE-30-C8S" secondAttribute="trailing" constant="20" id="GZm-GE-j7U"/>
                 <constraint firstItem="WyG-Yc-nrs" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="HKz-lQ-CfN"/>
                 <constraint firstItem="ala-17-foh" firstAttribute="top" secondItem="2uO-Wo-37j" secondAttribute="bottom" constant="20" id="IAY-Ql-o5C"/>
+                <constraint firstItem="ala-17-foh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="40" id="JKf-SZ-xzo"/>
                 <constraint firstItem="2uO-Wo-37j" firstAttribute="top" secondItem="WyG-Yc-nrs" secondAttribute="bottom" constant="20" id="NoG-01-gVH"/>
                 <constraint firstItem="2uO-Wo-37j" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Nwc-9B-Z69"/>
                 <constraint firstItem="ala-17-foh" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="fAZ-mW-ppr"/>
-                <constraint firstItem="WyG-Yc-nrs" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="114" id="oLx-UE-MD2"/>
+                <constraint firstItem="WyG-Yc-nrs" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="70" id="oLx-UE-MD2"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
             <point key="canvasLocation" x="623.5" y="160.5"/>
